--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- This line is money! It points your HTML to the CSS file. -->
   <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+ <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 
 <body>
@@ -30,8 +30,8 @@
     <aside id="contact-info">
       <h2>Contact Info</h2>
       <ul>
-        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+        <li><strong>Email:</strong> <a href="#">meetkamal@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="#">meetk5</a></li>
         <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
       </ul>
     </aside>
