--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  
     <section id="main-bio">
       <section id="figure">
-        <h2 id="bio-name">Meet K Kaur Sahni</h2>
+        <h2 id="bio-name">Meet Kamal Kaur</h2>
         
         <table border = 1 style="width: 70%;">
            
