--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <p style="text-indent: 40px;">&#9733;Pursuing Data Science & Analytics at Rutgers
                 <p style="text-indent: 40px;">&#9733;Masters in Sofware Engineering 
                 <p style="text-indent: 40px;">&#9733;Done Research at Thapar University (Published 2 Research papers)
+                <p style="text-indent: 40px;">&#9733;Worked with IBM, Wipro, TCS, Quark and clients like Charles-Schwab, Johnson & Johnson, CIGNA, Manulife Financials, Citigroup  
                 <p style="text-indent: 40px;">&#9733;Influencer</p></td>
 
                <td> 
@@ -79,7 +80,7 @@
                     <h2 style="text-align: center;">Tools & Languages</h2>
 
                     <ul>
-                        <li>Python, Pandas, Matplotlib, SQLAlchemy</li>
+                        <li>Python, Pandas, Matplotlib, Python-APIs, SQLAlchemy</li>
                         <li>SQL, Relational DBMS</li>
                         <li>Excel, VBA</li>
                     </ul>
@@ -89,6 +90,7 @@
                             <li>HP ALM, HP Quality Center</li>
                             <li>Parasoft SOATest 9.0</li>
                             <li>Unit, Functional, Integration, System and UA Testing</li>
+                            <li>Test Planning & Reporting</li>
                     </ul>  
                 </td>
             </tr>
